--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,234 +7,78 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Quicksand:wght@400;600;700&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.minindex.css') }}">
-        <style type="text/css">
-
-    /* Optional: Makes the sample page fill the window. */
-            html,
-            body {
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-
-            .overlay {
-                display: none;
-                position: fixed;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                z-index: 999;
-                background: rgba(255, 255, 255, 0.8) url("static/images/loader.gif") center no-repeat;
-            }
-
-            body.loading {
-                overflow: hidden;
-            }
-
-            /* Make spinner image visible when body element has the loading class */
-            body.loading .overlay {
-                display: block;
-            }
-    .highlight {
-        background-color: cyan;
-        font-weight: bold;
-    }
-
-    .error {
-        color: #F00;
-        background-color: #FFF;
-    }
-    .spinner {
-        margin: 100px auto;
-        width: 50px;
-        height: 40px;
-        text-align: center;
-        font-size: 10px;
-    }
-
-    .spinner>div {
-        background-color: #333;
-        height: 100%;
-        width: 6px;
-        display: inline-block;
-
-        -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-        animation: sk-stretchdelay 1.2s infinite ease-in-out;
-    }
-
-    .spinner .rect2 {
-        -webkit-animation-delay: -1.1s;
-        animation-delay: -1.1s;
-    }
-
-    .spinner .rect3 {
-        -webkit-animation-delay: -1.0s;
-        animation-delay: -1.0s;
-    }
-
-    .spinner .rect4 {
-        -webkit-animation-delay: -0.9s;
-        animation-delay: -0.9s;
-    }
-
-    .spinner .rect5 {
-        -webkit-animation-delay: -0.8s;
-        animation-delay: -0.8s;
-    }
-
-    @-webkit-keyframes sk-stretchdelay {
-
-        0%,
-        40%,
-        100% {
-            -webkit-transform: scaleY(0.4)
-        }
-
-        20% {
-            -webkit-transform: scaleY(1.0)
-        }
-    }
-
-    @keyframes sk-stretchdelay {
-
-        0%,
-        40%,
-        100% {
-            transform: scaleY(0.4);
-            -webkit-transform: scaleY(0.4);
-        }
-
-        20% {
-            transform: scaleY(1.0);
-            -webkit-transform: scaleY(1.0);
-        }
-    }
-
-    .pie-chart-wrap {
-        margin: auto;
-        width: 308px;
-        height: 308px;
-        overflow: hidden;
-        position: relative;
-    }
-
-    .pie-chart-wrap .spinner {
-        margin: auto;
-        width: 50px;
-        height: 40px;
-        text-align: center;
-        font-size: 10px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .pie-chart-wrap .meter {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        stroke-width: 58px;
-    }
-
-    .pie-chart-wrap .circle {
-        r: 120;
-        cx: 50%;
-        cy: 50%;
-    }
-
-    .pie-chart-wrap .low {
-        stroke: #ff9595;
-    }
-
-    .pie-chart-wrap .moderate {
-        stroke: #fde8a8;
-        stroke-dasharray: 209 836;
-
-    }
-
-    .pie-chart-wrap .high {
-        stroke: #d2ff97;
-        stroke-dasharray: 557;
-
-    }
-
-    .pie-chart-wrap .low-dark {
-        stroke: #de0101 !important;
-    }
-
-    .pie-chart-wrap .moderate-dark {
-    stroke:  #ffc107 !important;
-    }
-
-    .pie-chart-wrap .high-dark {
-    stroke: #7ddf00 !important;
-    }
-
-    </style>
-
     </head>
     <body id="body">
         {% include '/header.html' %}
-        <div class="overlay"></div>
-        <div class="mainCntr cyberInsuranceFormWrapper">
-             <div class="formContainer">
-                  <div class="container">
-                        <h1 align="center">Video Dashboard</h1>
-                        <div class="row">
-                            <div class="col-md-8">
-                                <div id="accordion">
-                                    <div class="panel box">
-                                    <div class="boxContent" id="iframe_div">
-                                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{course_detail[0].video_id}}?modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                        <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-<!--                                        <div class="formContent" id="player">-->
-                                    </div>
-                                    </div>
-                                    </div>
-                                    </div>
-                                </div>
-                            <div class="col-md-4">
-                                    <div class="panel box">
-<!--                                        <div class="row spinner" id="right_panel_video_playlist">-->
-                                            <div>
-                                                <div>
-
-                                                    <h4>Video Playlist</h4>
-                                                    {% if course_detail|length == 0 %}
-                                                        <div>
-                                                            <h5> No video available</h5>
-                                                        </div>
-                                                    {% endif %}
-                                                    {% for video in course_detail %}
-                                                    <div>
-                                                        <h6 style="cursor: pointer;" class="change_frame_video" data-video_id="{{video.video_id}}">{{video.title}}</h6>
-                                                    </div>
-                                                    {% endfor %}
-                                                </div>
-<!--                                            &lt;!&ndash; loader &ndash;&gt;-->
-<!--                                            <div class="rect1"></div>-->
-<!--                                            <div class="rect2"></div>-->
-<!--                                            <div class="rect3"></div>-->
-<!--                                            <div class="rect4"></div>-->
-<!--                                            <div class="rect5"></div>-->
-                                        </div>
-
-                                    </div>
-                                </div>
-                        </div>
-                  </div>
+            <div class="container mt-3">
+                <h2>Courses</h2>
+                <br>
+                {% if courses|length == 0%}
+                    <h4>No course available</h4>
+                {% else %}
+                    {% for course in courses %}
+                        <div class="card" style="width:400px">
+                            <img class="card-img-top" src="{{course.url}}" alt="Card image" style="width:400px  ; height:300px;">
+                            <div class="card-body">
+                                <h4 class="card-title">{{course.title}}</h4>
+                                <p class="card-text">{{course.description}}</p>
+                                <a href="/course/{{course._id}}" class="btn btn-primary">View Course</a>
+                            </div>
+                          </div>
+                        <br>
+                    {% endfor %}
+                {% endif %}
             </div>
-        </div>
+
+
+<!--                                        -->
+<!--                                        &lt;!&ndash; 1. The <iframe> (and video player) will replace this <div> tag. &ndash;&gt;-->
+<!--&lt;!&ndash;                                        <div class="formContent" id="player">&ndash;&gt;-->
+<!--                                    </div>-->
+<!--                                    </div>-->
+<!--                                    </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            <div class="col-md-4">-->
+<!--                                    <div class="panel box">-->
+<!--&lt;!&ndash;                                        <div class="row spinner" id="right_panel_video_playlist">&ndash;&gt;-->
+<!--                                            <div>-->
+<!--                                                <div>-->
+
+<!--                                                    <h4>Video Playlist</h4>-->
+<!--                                                    {% if course_detail|length == 0 %}-->
+<!--                                                        <div>-->
+<!--                                                            <h5> No video available</h5>-->
+<!--                                                        </div>-->
+<!--                                                    {% endif %}-->
+<!--                                                    {% for video in course_detail %}-->
+<!--                                                    <div>-->
+<!--                                                        <h6 style="cursor: pointer;" class="change_frame_video" data-video_id="{{video.video_id}}">{{video.title}}</h6>-->
+<!--                                                    </div>-->
+<!--                                                    {% endfor %}-->
+<!--                                                </div>-->
+<!--&lt;!&ndash;                                            &lt;!&ndash; loader &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="rect1"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="rect2"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="rect3"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="rect4"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="rect5"></div>&ndash;&gt;-->
+<!--                                        </div>-->
+
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                        </div>-->
+<!--                  </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </body>
-    <script>
-        $(document).on("click",".change_frame_video",function(event) {
-          //  video_url = `https://www.youtube.com/embed/${this.data("video_id")}`;
-            var iframe_body = `
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/${$(this).data("video_id")}?modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`
-            $('#iframe_div').empty().append(iframe_body);
-        });
-    </script>
+<!--    <script>-->
+<!--        $(document).on("click",".change_frame_video",function(event) {-->
+<!--          //  video_url = `https://www.youtube.com/embed/${this.data("video_id")}`;-->
+<!--            var iframe_body = `-->
+<!--                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/${$(this).data("video_id")}?modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`-->
+<!--            $('#iframe_div').empty().append(iframe_body);-->
+<!--        });-->
+<!--    </script>-->
 
 </html>
