--- a/templates/course.html
+++ b/templates/course.html
@@ -11,12 +11,15 @@
         {% else %}
             <div class="container mt-5">
                 <div class="row">
-                    <div class="col-md-8" id="iframe_div">
-                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{videos[0].video_id}}?modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-md-8">
+                        <video width="500px" height="400px" id="iframe_div" controls autoplay>
+                            <source src="" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="col-md-4">
                         {% for video in videos %}
-                            <h6 style="cursor: pointer;" class="change_frame_video" data-video_id="{{video.video_id}}">{{video.title}}</h6>
+                            <h6 style="cursor: pointer;" class="change_frame_video" data-video_id="{{video._id}}">{{video.title}}</h6>
                         {% endfor %}
                     </div>
                 </div>
@@ -25,9 +28,22 @@
     </body>
     <script>
         $(document).on("click",".change_frame_video",function(event) {
-            var iframe_body = `
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/${$(this).data("video_id")}?modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`
-            $('#iframe_div').empty().append(iframe_body);
+            $.ajax({
+                url: `${window.location.pathname}/${$(this).data("video_id")}` , // point to server-side URL
+                type: 'GET',
+                success: function (data) {
+                    var iframe_body = `
+                        <source src="${data['video_url']}" type="video/mp4">
+                                    Your browser does not support the video tag.`
+                    $('#iframe_div').empty().append(iframe_body);
+                    console.table(data);
+                    console.log(data['video_url']);
+                },
+                error: function (data){
+                    alert('Something went wrong.');
+                },
+            });
+
         });
     </script>
 </html>
