--- a/templates/upload_video.html
+++ b/templates/upload_video.html
@@ -30,7 +30,7 @@
 <!--        </div>-->
         <div class="mb-3">
             <label for="file" class="form-label">Select a file:</label>
-            <input type="file" id="video_file" name="video_file">
+            <input type="file" id="file" name="file">
         </div>
 
         <button id="video_upload" class="btn btn-primary">Upload</button>
@@ -55,6 +55,63 @@
             form_data.append("course", $('#course').val());
             form_data.append("title", $('#title').val());
             form_data.append("description", $('#description').val());
+            form_data.append("file_name", document.getElementById('file').files[0].name);
+            $.ajax({
+                url: '/video_upload' , // point to server-side URL
+                cache: false,
+                contentType: false,
+                processData: false,
+                data:form_data,
+                type: 'POST',
+                success: function (data) {
+                    console.table(data);
+                    console.log(data);
+                    if(data['status'] == 200){
+                        var url_s3 = data['presigned_object']['url']
+                        var fields = data['presigned_object']['fields']
+
+                        var data = {
+                            bucket: "rapid-video-service",
+                            ...fields,
+                            file: file.files[0],
+                        };
+
+                        var formData = new FormData();
+                            for (var name in data) {
+                            formData.append(name, data[name]);
+                        }
+
+                        $.ajax({
+                            url: url_s3 , // point to server-side URL
+                            cache: false,
+                            contentType: false,
+                            processData: false,
+                            data:formData,
+                            type: 'POST',
+                            success: function (data) {
+                                console.table(data);
+                                console.log(data);
+                            },
+                            error: function (data){
+                                alert('Something went wrong.');
+                            },
+                        });
+
+                    }
+
+                },
+                error: function (data){
+                    alert('Something went wrong.');
+                },
+            });
+        });
+
+
+      /*  $(document).on("click", "#video_upload", function (event) {
+            var form_data = new FormData();
+            form_data.append("course", $('#course').val());
+            form_data.append("title", $('#title').val());
+            form_data.append("description", $('#description').val());
         //    form_data.append("keywords", $('#keywords').val());
             //form_data.append("category", $('#category').val());
            // form_data.append("visibility", $('#visibility').val());
@@ -74,6 +131,6 @@
                     alert('Something went wrong.');
                 },
             });
-       });
+       });*/
     </script>
 </html>
